force-app/main/default/objects/System_Configure__c/System_Configure__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>System Configure</label>
</CustomObject>