force-app/main/default/objects/System_Configure__c/fields/Above_Costline__c.field-meta.xml
<CustomField>
    <fullName>Above_Costline__c</fullName>
    <description>Commission percentage if BOATBUILDING__Costline_Sell_Price__c &lt; BOATBUILDING__Booked_Sale_Price__c</description>
    <label>Above Costline %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>