force-app/main/default/objects/System_Configure__c/fields/Additional_Rolls_For_Sold_Boat_Invoice__c.field-meta.xml
<CustomField>
    <fullName>Additional_Rolls_For_Sold_Boat_Invoice__c</fullName>
    <label>Additional Rolls For Sold Boat Invoice</label>
    <type>TextArea</type>
</CustomField>