force-app/main/default/objects/System_Configure__c/fields/BillOfSale__c.field-meta.xml
<CustomField>
    <fullName>BillOfSale__c</fullName>
    <label>BillOfSale</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>