force-app/main/default/objects/System_Configure__c/fields/BillOfSaleNT__c.field-meta.xml
<CustomField>
    <fullName>BillOfSaleNT__c</fullName>
    <label>BillOfSaleNT</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>