force-app/main/default/objects/System_Configure__c/fields/Boats_com_Feed_API_Key__c.field-meta.xml
<CustomField>
    <fullName>Boats_com_Feed_API_Key__c</fullName>
    <label>Boats.com Feed API Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>