force-app/main/default/objects/System_Configure__c/fields/BoatShowleadcapture_Interested_In__c.field-meta.xml
<CustomField>
    <fullName>BoatShowleadcapture_Interested_In__c</fullName>
    <label>BoatShowleadcapture Interested In</label>
    <type>TextArea</type>
</CustomField>