force-app/main/default/objects/System_Configure__c/fields/DefaultCustomerInquiryOwnerId__c.field-meta.xml
<CustomField>
    <fullName>DefaultCustomerInquiryOwnerId__c</fullName>
    <label>DefaultCustomerInquiryOwnerId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>