force-app/main/default/objects/System_Configure__c/fields/DisableInventoryBoatNotifications__c.field-meta.xml
<CustomField>
    <fullName>DisableInventoryBoatNotifications__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This checkbox is used to disable the Custom notifications sent to Sales and Marketing managers on update on Inventory statues. Primary notifications are Rigging, In Stock and Marketing Photos. If the checkbox is checked, notifications will not be sent.</description>
    <inlineHelpText>This checkbox is used to manage the Custom notifications sent to Sales and Marketing managers on update on Inventory statues. Primary notifications are Rigging, In Stock and Marketing Photos.</inlineHelpText>
    <label>DisableInventoryBoatNotifications</label>
    <type>Checkbox</type>
</CustomField>