force-app/main/default/objects/System_Configure__c/fields/Enable_Debug_Mails__c.field-meta.xml
<CustomField>
    <fullName>Enable_Debug_Mails__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Enable Debug Mails</label>
    <type>Checkbox</type>
</CustomField>