force-app/main/default/objects/System_Configure__c/fields/Enable_Full_Logs__c.field-meta.xml
<CustomField>
    <fullName>Enable_Full_Logs__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Enable Full Logs</label>
    <type>Checkbox</type>
</CustomField>