force-app/main/default/objects/System_Configure__c/fields/Lightning_Schedule_Permission__c.field-meta.xml
<CustomField>
    <fullName>Lightning_Schedule_Permission__c</fullName>
    <label>Lightning Schedule Permission</label>
    <length>255</length>
    <type>Text</type>
</CustomField>