force-app/main/default/objects/System_Configure__c/fields/Minimum_Sales_Price_Editable__c.field-meta.xml
<CustomField>
    <fullName>Minimum_Sales_Price_Editable__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This checkbox is used to control if the Minimum Sales Price on Inventory Wizard should be editable or Not.</description>
    <inlineHelpText>This checkbox is used to control if the Minimum Sales Price on Inventory Wizard should be editable or Not. If the Checkbox is true, that means the Field is Editable.</inlineHelpText>
    <label>Minimum Sales Price Editable</label>
    <type>Checkbox</type>
</CustomField>