force-app/main/default/objects/System_Configure__c/fields/New_Boat_Disclaimer__c.field-meta.xml
<CustomField>
    <fullName>New_Boat_Disclaimer__c</fullName>
    <label>New Boat Disclaimer</label>
    <type>TextArea</type>
</CustomField>