force-app/main/default/objects/System_Configure__c/fields/Prevent_WO_Complete_Operation__c.field-meta.xml
<CustomField>
    <fullName>Prevent_WO_Complete_Operation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Prevent WO Complete Operation</label>
    <type>Checkbox</type>
</CustomField>