force-app/main/default/objects/System_Configure__c/fields/Quote_Disclaimer__c.field-meta.xml
<CustomField>
    <fullName>Quote_Disclaimer__c</fullName>
    <label>Quote Disclaimer</label>
    <type>TextArea</type>
</CustomField>