force-app/main/default/objects/System_Configure__c/fields/Quote_PDF__c.field-meta.xml
<CustomField>
    <fullName>Quote_PDF__c</fullName>
    <label>Quote PDF</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>