force-app/main/default/objects/System_Configure__c/fields/Quote_Pdf_Width__c.field-meta.xml
<CustomField>
    <fullName>Quote_Pdf_Width__c</fullName>
    <label>Quote Pdf Width%</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>