force-app/main/default/objects/System_Configure__c/fields/Schedule_Resource_Grid_User_Role__c.field-meta.xml
<CustomField>
    <fullName>Schedule_Resource_Grid_User_Role__c</fullName>
    <label>Schedule Resource Grid User Role</label>
    <length>255</length>
    <type>Text</type>
</CustomField>