force-app/main/default/objects/System_Configure__c/fields/Site_URL__c.field-meta.xml
<CustomField>
    <fullName>Site_URL__c</fullName>
    <label>Site URL</label>
    <required>true</required>
    <type>Url</type>
</CustomField>