force-app/main/default/objects/System_Configure__c/fields/TechEfficiencyDashboardId__c.field-meta.xml
<CustomField>
    <fullName>TechEfficiencyDashboardId__c</fullName>
    <label>TechEfficiencyDashboardId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>