force-app/main/default/objects/System_Configure__c/fields/Trailer_Registration_Fee__c.field-meta.xml
<CustomField>
    <fullName>Trailer_Registration_Fee__c</fullName>
    <label>Trailer Registration Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>