force-app/main/default/objects/System_Configure__c/fields/Turn_Off_Inventory_Alerts__c.field-meta.xml
<CustomField>
    <fullName>Turn_Off_Inventory_Alerts__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Turn Off Inventory Alerts</label>
    <type>Checkbox</type>
</CustomField>