force-app/main/default/objects/System_Configure__c/fields/Under_Costline__c.field-meta.xml
<CustomField>
    <fullName>Under_Costline__c</fullName>
    <description>Commission percentage if BOATBUILDING__Costline_Sell_Price__c &gt; BOATBUILDING__Booked_Sale_Price__c</description>
    <inlineHelpText>Commission percentage if BOATBUILDING__Costline_Sell_Price__c &gt; BOATBUILDING__Booked_Sale_Price__c</inlineHelpText>
    <label>Under Costline %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>