force-app/main/default/objects/System_Configure__c/fields/Use_Monthly_View_in_Schedule__c.field-meta.xml
<CustomField>
    <fullName>Use_Monthly_View_in_Schedule__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Use Monthly View in Schedule</label>
    <type>Checkbox</type>
</CustomField>