force-app/main/default/objects/System_Configure__c/fields/Used_Boat_Disclaimer__c.field-meta.xml
<CustomField>
    <fullName>Used_Boat_Disclaimer__c</fullName>
    <label>Used Boat Disclaimer</label>
    <type>TextArea</type>
</CustomField>