force-app/main/default/objects/System_Configure__c/fields/User_Name_for_Webook_A_C_Owner_Id__c.field-meta.xml
<CustomField>
    <fullName>User_Name_for_Webook_A_C_Owner_Id__c</fullName>
    <label>User Name for Webook A/C Owner Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>