force-app/main/default/objects/System_Configure__c/fields/Web_invoice_role__c.field-meta.xml
<CustomField>
    <fullName>Web_invoice_role__c</fullName>
    <label>Web invoice role</label>
    <length>50</length>
    <type>Text</type>
</CustomField>