force-app/main/default/objects/System_Configure__c/fields/WO_Disclaimer__c.field-meta.xml
<CustomField>
    <fullName>WO_Disclaimer__c</fullName>
    <label>WO Disclaimer</label>
    <type>TextArea</type>
</CustomField>