force-app/main/default/objects/System_Configure__c/fields/Work_Order_PDF__c.field-meta.xml
<CustomField>
    <fullName>Work_Order_PDF__c</fullName>
    <label>Work Order PDF</label>
    <length>255</length>
    <type>Text</type>
</CustomField>